# acessilia

./: .env.example  .gitignore  ANALYSIS_REPORT.md  Dockerfile  README.md  Roberto_DaMatta_-_O_que_faz_o_brasil__Brasil.docx  Roberto_DaMatta_-_O_que_faz_o_brasil__Brasil.html  Roberto_DaMatta_-_O_que_faz_o_brasil__Brasil.txt  descrição-logo.txt  find_is_file_size_allowed.py  print_settings.py  proposta.md  pyproject.toml  reorganizacao.md  requirements.txt  run.py
adapters/exporters/: __init__.py  base.py
bot/: agente_mestre.py  main.py
bot/agents/: agente_unico.py
bot/clients/: __init__.py  ollama.py  opencode.py  openrouter.py
bot/exporters/: pdf_exporter.py
bot/handlers/: document.py  start.py
bot/prompts/: baixo.txt  detalhado.txt  medio.txt  ocr.txt
bot/services/: cache.py  history_service.py  queue_service.py
bot/utils/: status_tracker.py
config/: settings.py
core/: orchestrator.py
core/agents/: agente_unico.py  data_agent.py  editor_agent.py  reader_agent.py  team.py  types.py  vision_agent.py
core/ai/: base.py  ollama.py  openrouter.py
core/exporters/: audio_exporter.py  docx_exporter.py  pdf_exporter.py  txt_exporter.py
core/models/: ai_client.py
core/prompts/: baixo.md  medio.md  ocr.md  regiao_formula.md  regiao_imagem.md  regiao_tabela.md  regiao_texto_escaneado.md
core/services/: cache.py  cleanup_service.py  download_token_service.py  email_service.py  history_service.py  queue_service.py
core/tools/: image_converter.py  image_enhancer.py  image_tools.py  pdf_splitter.py  prompt_tools.py  region_classifier.py  structurer.py  text_tools.py
data/: history.db  history.db-shm  history.db-wal
docs/: architecture.md  modules.md
exporters/: __init__.py  pandoc_exporter.py
filters/: __init__.py  pandoc_filters.py
pipeline/: __init__.py  pandoc_ast_builder.py  sanitizer.py  structure_parser.py
renderers/: html_renderer.py
tests/: test_audit_validation.py  test_canonical_pipeline.py  test_ollama_client.py  test_openrouter_client.py  test_pandoc_filters.py  test_structure_parser.py  test_validators.py
web/: app.py
(+191 files in other folders)
