[tool.poetry]
name = "bot-acess"
version = "0.2.0"
description = "Bot para extração e acessibilidade de documentos."
authors = ["Jhonata"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "core" },
    { include = "adapters" },
    { include = "interfaces" }
]

[tool.poetry.dependencies]
python = "^3.11"

loguru = "*"
aiosmtplib = "*"
opencv-python = "*"
edge-tts = "*"
numpy = "*"
pypdf = "*"
fastapi = "^0.115"
uvicorn = "^0.30"
aiogram = "^3.13"
pymupdf = "^1.24"
pillow = "^10.4"
httpx = "^0.27"
reportlab = "^4.2"
python-dotenv = "^1.0"
docling = "*"
rapidocr = "*"
slowapi = "*"
python-multipart = "*"
agno = "*"
openai = "^2.45.0"
ollama = "^0.6.2"
pytest = "^9.1.1"
respx = "^0.23.1"
pytest-asyncio = "^1.4.0"


[tool.poetry.scripts]
bot-acess = "interfaces.cli.run:main"